# th06rip

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
th06rip/: __main__.py  m3u.py  musiccmt.py  thdat.py
